# OpenCity

./: README.md  manifest.yaml  pyproject.toml  requirements.txt
opencity/: __init__.py  hubconnector.py
